# a

./: CMakeLists.txt  README.md  readPic.cpp
